; ModuleID = '/home/carl/AnghaBench/linux/net/smc/extr_smc_ib.c_smc_ib_create_protection_domain.c'
source_filename = "/home/carl/AnghaBench/linux/net/smc/extr_smc_ib.c_smc_ib_create_protection_domain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smc_link = type { i32*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @smc_ib_create_protection_domain(%struct.smc_link* %0) #0 {
  %2 = alloca %struct.smc_link*, align 8
  %3 = alloca i32, align 4
  store %struct.smc_link* %0, %struct.smc_link** %2, align 8
  %4 = load %struct.smc_link*, %struct.smc_link** %2, align 8
  %5 = getelementptr inbounds %struct.smc_link, %struct.smc_link* %4, i32 0, i32 1
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32* @ib_alloc_pd(i32 %8, i32 0)
  %10 = load %struct.smc_link*, %struct.smc_link** %2, align 8
  %11 = getelementptr inbounds %struct.smc_link, %struct.smc_link* %10, i32 0, i32 0
  store i32* %9, i32** %11, align 8
  %12 = load %struct.smc_link*, %struct.smc_link** %2, align 8
  %13 = getelementptr inbounds %struct.smc_link, %struct.smc_link* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @PTR_ERR_OR_ZERO(i32* %14)
  store i32 %15, i32* %3, align 4
  %16 = load %struct.smc_link*, %struct.smc_link** %2, align 8
  %17 = getelementptr inbounds %struct.smc_link, %struct.smc_link* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = call i64 @IS_ERR(i32* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %1
  %22 = load %struct.smc_link*, %struct.smc_link** %2, align 8
  %23 = getelementptr inbounds %struct.smc_link, %struct.smc_link* %22, i32 0, i32 0
  store i32* null, i32** %23, align 8
  br label %24

24:                                               ; preds = %21, %1
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32* @ib_alloc_pd(i32, i32) #1

declare dso_local i32 @PTR_ERR_OR_ZERO(i32*) #1

declare dso_local i64 @IS_ERR(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
